--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,19 @@
   "manifest_version": 2,
 
   "name": "CoWin Slot Notifier",
-  "description": "This extension is the demo extension for Douly",
-  "version": "2.0",
+  "description": "Extension to notify the availability of vaccine slots",
+  "version": "1.0",
   "icons": {
-    "48": "notify.png"
+    "48": "media/icons/notify.png"
   },
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "media/icons/vaccine.png",
     "default_popup": "popup.html"
   },
   "background":{
-    "scripts": ["VaccineNotifier.js","SlotProcessor.js"]
+    "scripts": ["background-scripts/VaccineNotifier.js","background-scripts/SlotProcessor.js"]
   },
   "permissions": [
-    "activeTab",
     "storage",
     "alarms",
     "notifications",
